change page style, overlap images and fix google maps component

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -3,14 +3,17 @@
 body {
     margin: 0;
     // font-family: 'Roboto', sans-serif;
-    font-family: 'Raleway', sans-serif;
+    // font-family: 'Raleway', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     background-color: $page-bg;
 }
 
 h1, h2, h3, h4 {
     // font-family: 'Roboto', sans-serif;
-    font-family: 'Tangerine', cursive;
+    // font-family: 'Tangerine', cursive;
+    font-family: 'Great Vibes', cursive;
 }
+
 
 h1 { font-size: 30pt; }
 h2 { font-size: 25pt; }
@@ -31,6 +34,10 @@ a {
     padding: 20px;
     margin: 0 auto;
     max-width: 960px;
+    background-color: white;
+    box-shadow: 0px 0px 31px -6px black;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .centered-text {
