--- a/src/style/fullWidthImages.scss
+++ b/src/style/fullWidthImages.scss
@@ -2,10 +2,18 @@
 
 .full-width-image {
     width: 100%;
-    height: 20em;
+    height: 30em;
     background-size:cover;
     background-position: center;
     background-repeat: no-repeat;
+    margin: -30px 0;
+    z-index: -1;
+    position: relative;
+
+    &--primary-focus {
+        margin: 0;
+        z-index: 0;
+    }
 }
 
 .venue-image {
